--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# Byte-compiled / optimized Python files
 *.pyc
 *.pyo
 *.pyd
@@ -5,7 +6,11 @@ __pycache__/
 *.so
 *.dylib
 
+# IDE files
+.vscode/
+.idea/
+*.pydevproject
 
-# logs 
-*logs/
-*wandb/
+# Logs 
+logs/
+wandb/
