--- a/requirements.txt
+++ b/requirements.txt
@@ -84,6 +84,7 @@ requests==2.32.3
 responses==0.18.0
 rich==13.7.1
 safetensors==0.4.4
+scikit-learn==1.5.1
 scipy==1.14.0
 sentencepiece==0.2.0
 sentry-sdk==2.12.0
