sft train and requirement

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,5 @@ bitsandbytes==0.41.1
 accelerate==1.0.0rc1
 #alignment-handbook==0.2.0
 wandb==0.13.11
-datasets==2.14.6git 
+datasets==2.14.6
+flash_attn==2.6.3
