--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,11 @@
-transformers==4.44.2
-trl==0.10.1
-peft==0.12.0
+trl==0.12.1
+transformers
+peft==0.13.2
+datasets==3.1.0
 vllm==0.5.4
 numpy==1.26.4
 deepspeed==0.14.4
 bitsandbytes==0.41.1
 accelerate==1.0.0rc1
-#alignment-handbook==0.2.0
 wandb==0.13.11
-datasets==2.14.6
 flash_attn==2.6.3
